<resources>
    <string name="app_name">MONTH_5_</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="zero">0</string>
    <string name="add">+</string>
    <string name="dic">-</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="android">android</string>
    <string name="calculator">Calculator</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="request">Request</string>
    <string name="result">Result</string>
    <string name="up">Назад</string>
    <string name="data">Data</string>
    <string name="gallery">Gallery</string>
    <string name="photo">Photo</string>
    <string name="rrr">Request</string>
    <string name="argument">Argument</string>
    <string name="argument2">Argument2</string>
    <string name="to_finish">Переход на вторую страницу</string>
    <string name="history">History</string>
    <string name="result1">Result</string>
    <string name="mvvm">MVVM</string>
</resources>