<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_lovee"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoveCalculator.ResultFragment">


    <TextView
        android:id="@+id/tv_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:background="@color/white"
        android:text="@string/first"
        android:textAlignment="center"
        android:textColor="@color/openPink"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/tv_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:text="@string/second"
        android:textAlignment="center"
        android:textColor="@color/openPink"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="@color/openPink"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tv_persenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:textAlignment="center"
        android:text="@string/data"
        android:textColor="@color/pink"
        android:textSize="40sp" />

    <Button
        android:id="@+id/btn_try_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/pink"
        android:text="@string/up"
        android:textSize="40sp"
        android:textStyle="bold" />


</LinearLayout>