<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".image.ImageFragment">

    <EditText
        android:id="@+id/photo_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/photo"
        android:textSize="32sp" />

    <Button
        android:id="@+id/btn_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/openPink"
        android:text="@string/rrr"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pink"
        android:text="@string/to_finish" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_image" />
</LinearLayout>